# NeuralNetworkFromScratch

./: .gitignore  CMakeLists.txt  LICENSE  README.md
examples/: test_autograd.cpp  test_linear.cpp  test_tensor.cpp
include/: activations.hpp  data_utils.hpp  dataloader.hpp  linear.hpp  losses.hpp  module.hpp  optimizer.hpp  sequential.hpp  tensor.hpp
include/lamp/data/: data_utils.hpp  dataloader.hpp
include/lamp/nn/: activations.hpp  linear.hpp  losses.hpp  module.hpp  sequential.hpp
include/lamp/optim/: optimizer.hpp
src/: activations.cpp  data_utils.cpp  dataloader.cpp  linear.cpp  losses.cpp  module.cpp  optimizer.cpp  sequential.cpp  tensor.cpp
src/core/: tensor.cpp
src/data/: data_utils.cpp  dataloader.cpp
src/nn/: activations.cpp  linear.cpp  losses.cpp  module.cpp  sequential.cpp
src/optim/: optimizer.cpp
